--- a/WikiParez/appdata/changes
+++ b/WikiParez/appdata/changes
@@ -2,8 +2,10 @@ DATE		ROOM/ROOMS			ČTVRŤ			CHANGE
 22/06/25	Tělocvična			GOIAS			napojení na Hráz
 22/06/25	Jižní Blok			GANDALF			prodlouženo o jedno poschodí
 22/06/25	Balónky				GI				nástupní plošina pro happy ghasty
-22/06/25	Ironie				ŽELEZNÁ LHOTA	vchod z Hráze
-22/06/25	Síň					TRÓJA			vchod z Hráze
+22/06/25	Síň				TRÓJA			vchod z Hráze
 22/06/25	Ortofrater			TRIANGL			napojení na Hráz
 22/06/25	Dálnice				LEDN./D. KOL.	schodiště na Hráz
 22/06/25	Dálnice				LEDNICE			žebřík z oceánu
+29/06/25	Mrkev a Závodní Okruh					cimrman místnosti
+29/06/25	Posse&Russe						prejmenovano na Vtip
+29/06/25	Hraz							postaveny rybniky josef a u petra a cesta mezi nimi
