--- a/WikiParez/appdata/changes
+++ b/WikiParez/appdata/changes
@@ -8,4 +8,4 @@ DATE		ROOM/ROOMS			ČTVRŤ			CHANGE
 29/06/25	Posse&Russe						prejmenovano na Vtip
 29/06/25	Hraz							postaveny rybniky josef a u petra a cesta mezi nimi
 30/06/25	Doupě							-unikove schodiste
-30/06/25	Holic a Hraz						spojeno
+30/06/25	xHolicx a Hraz						spojeno
